--- a/task_3/first.ipynb
+++ b/task_3/first.ipynb
@@ -12,60 +12,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 97,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 1., -1., -1., -1.,  1.],\n",
-       "       [ 0.,  1., -1., -1.,  1.],\n",
-       "       [ 0.,  0.,  1., -1.,  1.],\n",
-       "       [ 0.,  0.,  0.,  1.,  1.],\n",
-       "       [ 0.,  0.,  0.,  0.,  1.]])"
-      ]
-     },
-     "execution_count": 94,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "n = 5\n",
     "\n",
     "a = -1 * np.triu(np.ones(n)) + np.eye(n)*2\n",
     "a[:, -1] *= -1\n",
     "a[:, -1][-1] *= -1\n",
-    "f = np.ones(n)\n",
-    "\n",
-    "a"
+    "f = np.ones(n)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 98,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([[1., 0., 0., 0., 0.],\n",
-       "        [0., 1., 0., 0., 0.],\n",
-       "        [0., 0., 1., 0., 0.],\n",
-       "        [0., 0., 0., 1., 0.],\n",
-       "        [0., 0., 0., 0., 1.]]),\n",
-       " array([[ 1., -1., -1., -1.,  1.],\n",
-       "        [ 0.,  1., -1., -1.,  1.],\n",
-       "        [ 0.,  0.,  1., -1.,  1.],\n",
-       "        [ 0.,  0.,  0.,  1.,  1.],\n",
-       "        [ 0.,  0.,  0.,  0.,  1.]]))"
-      ]
-     },
-     "execution_count": 95,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def lu(a):\n",
     "    l = np.zeros([n, n])\n",
@@ -86,23 +49,23 @@
     "                for k in range(i):\n",
     "                    sum += l[j][k] * u[k][i]\n",
     "                l[j][i] = (a[j][i] - sum) / u[i][i]\n",
-    "    return (np.array(l), np.array(u))\n",
-    "\n",
-    "lu(a)\n",
-    "    "
+    "    return (np.array(l), np.array(u))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0. 0. 0. 0. 1.]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., 0., 1.])"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -122,7 +85,7 @@
     "            sum += u[n-i - 1][n-k - 1] * x[n-k - 1]\n",
     "        x[n-i - 1] = (f[n-i - 1] - sum) / l[n-i - 1][n-i - 1]\n",
     "\n",
-    "    print(x)\n",
+    "    return x\n",
     "\n",
     "\n",
     "solution(a, f)\n"
