convergence checking added

--- a/task_3/third.ipynb
+++ b/task_3/third.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from numpy.linalg import inv\n",
     "from matplotlib import pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "import sympy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,6 +35,52 @@
     "\n",
     "a = create_matrix(n, b)\n",
     "f = create_term(n)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Convergence check"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def is_convergence(n):\n",
+    "    mat = [[0 for i in range(n)] for i in range(n)]\n",
+    "    x = sympy.Symbol('x')\n",
+    "\n",
+    "    for i in range(n):\n",
+    "        for j in range(n):\n",
+    "            if i == j:\n",
+    "                mat[i][j] = 2 * x\n",
+    "            elif i - j == 1:\n",
+    "                mat[i][j] = (-1 + b) * x\n",
+    "            elif j - i == 1:\n",
+    "                mat[i][j] = (-1 - b)\n",
+    "            else:\n",
+    "                mat[i][j] = 0\n",
+    "\n",
+    "    mat = sympy.Matrix(mat)\n",
+    "    # print(mat.det(), mat)\n",
+    "\n",
+    "    return max(np.roots(mat.det().as_poly().coeffs())) < 1\n",
+    "is_convergence(n)"
    ]
   },
   {
